# nomad-perolab-umr-plugin

./: .cruft.json  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_perolab_umr/Solar/constants/: __init__.py  constants.py
src/nomad_perolab_umr/Solar/nomadapifunctions/: __init__.py  authentication.py  get_archive.py  local_test_aaron.py  upload_bundle.py  user_groups.py
src/nomad_perolab_umr/Solar/otherfunctions/: __init__.py  am1_5g_spectrum.py  color_gradient.py  eqe_calculations.py  get_ipce.py  hyppl_functions.py  sq_limit.py
src/nomad_perolab_umr/Solar/otherfunctions/Data/: AM0.xlsx  AM15G_ASTMG173.xlsx  AM1_5G.txt
src/nomad_perolab_umr/Solar/plotfunctions/: __init__.py  ageing_analysis.py  batch_analysis.py  best_devices.py  boxplots.py  connection_test.py  eqe.py  helper_functions.py  jv.py  luqy.py  mppt.py  plot_matrix.py  stability.py  test.py  update_layout.py  uv_vis.py
src/nomad_perolab_umr/Solar/plottemplate/: Thumbs.db  __init__.py  umr_plot_template.py
src/nomad_perolab_umr/apps/: __init__.py  chemicals_app.py  voila_app.py
src/nomad_perolab_umr/example_uploads/: __init__.py
src/nomad_perolab_umr/example_uploads/voila_scripts/: Data_Uploader.archive.json  JV_Analysis.archive.json  README.md  api_calls.py  batch_selection.py  excel_sheet_creator.archive.json
src/nomad_perolab_umr/example_uploads/voila_scripts/Data_uploader/: upload_data_for_sample.ipynb
src/nomad_perolab_umr/example_uploads/voila_scripts/Excel_creator/: excel_creator.ipynb  experiment_excel_builder.py  guide.html  sheet_data_entry_guide.py  sheet_experiment.py  sheet_how_to_cite.py  voila_experiment_app.py
src/nomad_perolab_umr/example_uploads/voila_scripts/JV_Analysis/: jv_analysis.ipynb  main.py
src/nomad_perolab_umr/parsers/: __init__.py  myparser.py  parser.py
src/nomad_perolab_umr/schema_packages/: __init__.py  batch.py  categories.py  create_external_batch.py  create_internal_batch.py  create_pdf_batch_plan.py  helper_functions.py  schema_package.py  solar_cell.py  substrate.py  suggestions_lists.py  umr_baseclasses.py  umr_reference_classes.py  umr_synthesis_classes.py  voila.py
src/nomad_perolab_umr/schema_packages/characterization/: __init__.py  connection_test.py  eqe_measurement.py  jv_measurement.py  luqy_pl.py  measurement_baseclasses.py  mpp_tracking.py  stability_test.py
src/nomad_perolab_umr/schema_packages/processes/: __init__.py  blade_coating.py  cleaning.py  etching.py  evaporation.py  process_baseclasses.py  spin_coating.py  spray_pyrolysis.py  sputtering.py
src/nomad_perolab_umr/schema_packages/read_and_parse/: connection_test_extra_parser.py  connection_test_parser.py  eqe_parser.py  general_parser.py  jv_parser.py  luqy_parser.py  mppt_parser.py  parameters_parser.py  read_header_line.py  stability_parser.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
