[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
name = "nomad-perolab-umr"
description = "Plugin for NOMAD Oasis at PeroLab Marburg"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aaron Schüller-Ruhl", email = "aaron.schueller-ruhl@physik.uni-marburg.de" },
]
maintainers = [
    { name = "Aaron Schüller-Ruhl", email = "aaron.schueller-ruhl@physik.uni-marburg.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab>=1.3.10",
    "python-magic-bin; sys_platform == 'win32'",
    'fpdf>=1.7.2'
]

[project.urls]
Repository = "https://github.com/AG-SEK/nomad-perolab-umr"

[project.optional-dependencies]
dev = ["ruff", "pytest", "structlog"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nomad.plugin']
batch_schema = "nomad_perolab_umr.schema_packages:batch_schema"
solar_cell_schema = "nomad_perolab_umr.schema_packages:solar_cell_schema"
substrate_schema = "nomad_perolab_umr.schema_packages:substrate_schema"
external_batch_plan_schema = "nomad_perolab_umr.schema_packages:external_batch_plan_schema"
internal_batch_plan_schema = "nomad_perolab_umr.schema_packages:internal_batch_plan_schema"
baseclasses_schema = "nomad_perolab_umr.schema_packages:baseclasses_schema"
synthesis_schema = "nomad_perolab_umr.schema_packages:synthesis_schema"
voila_schema = "nomad_perolab_umr.schema_packages:voila_schema"


blade_coating_schema = "nomad_perolab_umr.schema_packages.processes:blade_coating_schema"
cleaning_coating_schema = "nomad_perolab_umr.schema_packages.processes:cleaning_coating_schema"
spin_coating_schema = "nomad_perolab_umr.schema_packages.processes:spin_coating_schema"
spray_pyrolysis_schema = "nomad_perolab_umr.schema_packages.processes:spray_pyrolysis_schema"
evaporation_schema = "nomad_perolab_umr.schema_packages.processes:evaporation_schema"


connection_test_schema = "nomad_perolab_umr.schema_packages.characterization:connection_test_schema"
eqe_schema = "nomad_perolab_umr.schema_packages.characterization:eqe_schema"
jv_schema = "nomad_perolab_umr.schema_packages.characterization:jv_schema"
mpp_tracking_schema = "nomad_perolab_umr.schema_packages.characterization:mpp_tracking_schema"
stability_test_schema = "nomad_perolab_umr.schema_packages.characterization:stability_test_schema"



myparser = "nomad_perolab_umr.parsers:myparser"
cicci_txt_parser_entry_point = "nomad_perolab_umr.parsers:cicci_txt_parser_entry_point"

# Apps
chemicals_app_entry_point =  "nomad_perolab_umr.apps:chemicals_app_entry_point"
voila_app_entry_point =  "nomad_perolab_umr.apps:voila_app_entry_point"

#app_entry_point = "nomad_perolab_umr.apps:app_entry_point"
example_upload_entry_point = "nomad_perolab_umr.example_uploads:example_upload_entry_point"
voila_scripts_entry_point = "nomad_perolab_umr.example_uploads:voila_scripts_entry_point"


# Die Module stability_test.py und connection_test.py dürfen nicht von pytest als Test Dateien erkannt werden.
[tool.pytest.ini_options]
addopts = "--ignore=src/nomad_perolab_umr/schema_packages/characterization/connection_test.py --ignore=src/nomad_perolab_umr/schema_packages/characterization/stability_test.py"


#[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
#skip = [".github/*"]
